--- a/composer.json
+++ b/composer.json
@@ -4,35 +4,29 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "php": "^8.1"
+    "php": "^8.2",
+    "psr/event-dispatcher": "^1.0",
+    "solophp/contracts": "dev-main@dev"
   },
   "suggest": {
-    "solophp/task-queue": "^2.1"
+    "solophp/job-queue": "^1.0",
+    "psr/container": "^2.0"
   },
   "autoload": {
     "psr-4": {
       "Solo\\AsyncEventDispatcher\\": "src/"
     }
   },
-  "autoload-dev": {
-    "psr-4": {
-      "Tests\\": "tests/"
-    },
-    "classmap": [
-      "tests/Support"
-    ]
-  },
   "require-dev": {
-    "phpunit/phpunit": "^10.0",
-    "squizlabs/php_codesniffer": "^3.7"
+    "phpstan/phpstan": "^2.1",
+    "squizlabs/php_codesniffer": "^3.13",
+    "psr/container": "^2.0"
   },
   "scripts": {
-    "test": "phpunit --testdox",
-    "cs": "phpcs --standard=PSR12 src/ tests/",
-    "cs-fix": "phpcbf --standard=PSR12 src/ tests/"
+    "phpstan": "phpstan analyse src",
+    "cs": "phpcs --standard=PSR12 src/",
+    "cs-fix": "phpcbf --standard=PSR12 src/"
   },
   "minimum-stability": "stable",
   "prefer-stable": true
 }
-
-
